fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -106,10 +106,12 @@ ol li
 #logo #logo_text
 { position: absolute;
   top: 20px;
-  left: 0;}
+  left: 35px;}
 
 #logo h1, #logo h2
-{ font: normal 300% 'century gothic', arial, sans-serif;
+{
+  padding-left: 100;
+  font: normal 300% 'century gothic', arial, sans-serif;
   border-bottom: 0;
   text-transform: none;
   margin: 0;}
